--- a/MapboxAndroidDemo/src/main/res/layout/symbol_layer_info_window_layout_callout.xml
+++ b/MapboxAndroidDemo/src/main/res/layout/symbol_layer_info_window_layout_callout.xml
@@ -25,7 +25,7 @@
         android:orientation="vertical">
 
         <RelativeLayout
-            android:id="@+id/text_container"
+            android:id="@+id/plain_text_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -34,7 +34,7 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/plain_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -44,10 +44,10 @@
                 tools:text="Tonkutsu Ramen" />
 
             <TextView
-                android:id="@+id/style"
+                android:id="@+id/plain_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/title"
+                android:layout_below="@id/plain_title"
                 android:layout_marginTop="8dp"
                 android:text="Japanese"
                 android:textSize="12sp"
